--- a/demo/esm/index.html
+++ b/demo/esm/index.html
@@ -6,16 +6,16 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Demo</h1>
+  <h1>all components</h1>
   <div id="app"></div>
   <script type="module">
       import { createApp } from "vue/dist/vue.esm-bundler.js";
-      import SmartyUI from "../../dist/rz-ui.mjs";
+      import RzUI from "../../dist/rz-ui.mjs";
 
       createApp({
           template: `
         <RzButton/>
-      `}).use(SmartyUI).mount('#app')
+      `}).use(RzUI).mount('#app')
 
   </script>
 </body>
