refactor: 重构代码结构

--- a/demo/iife/index.html
+++ b/demo/iife/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>components</h1>
     <div id="app"></div>
-    <link rel="stylesheet" href="../dist/style.css" />
+    <link rel="stylesheet" href="../../dist/style.css" />
     <script src="../../node_modules/vue/dist/vue.global.js"></script>
     <script src="../../dist/rz-ui.iife.js"></script>
     <script>
